--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -5,7 +5,9 @@
 }
 
 .experience__container > div {
-    background: var(--color-bg);
+    background: #0f0c29;  
+    background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29); 
+    background: linear-gradient(to right, #24243e, #302b63, #0f0c29); 
     padding: 2.4rem 5rem;
     border-radius: 2rem;
     border: 1px solid transparent;
@@ -17,6 +19,10 @@
     text-align: center;
     margin-bottom: 2rem;
     color: var(--color-primary);
+}
+.experience__container > div h4 {
+    color: var(--color-lighter);
+
 }
 
 .experience__details-icon {
