--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -3,7 +3,9 @@ header {
     width: 100%;
     padding-top: 4rem;
     overflow: hidden;
-    background-color: var(--color-primary);
+    background: #0f0c29;  
+    background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29); 
+    background: linear-gradient(to right, #24243e, #302b63, #0f0c29); 
 
 }
 
@@ -69,6 +71,17 @@ header {
     padding: 5rem 1.5rem 1.5rem 1.5rem; */
 
 }
+.header-img {
+    width: 5rem;
+    height: 5rem;
+    position: absolute;
+    border-radius: 50%;
+    right: -9rem;
+    top: -2rem;
+}
+.header-img > img {
+    border-radius: 50%;
+}
 
 /* ===================  (MEDIUM DEVICES) ======================== */
 @media screen and (max-width: 1024px) {
@@ -88,6 +101,14 @@ header {
         display: none;
 
     } 
+    .header-img {
+        width: 5rem;
+        height: 5rem;
+        position: absolute;
+        border-radius: 50%;
+        right: -0.5rem;
+        top: -3rem;
+    }
 
 }
 
