--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -19,7 +19,7 @@ nav a {
     padding: 0.5rem;
     border-radius: 50%;
     display: flex;
-    color: var(--color-bg);
+    color: var(--color-primary);
     font-size: 1.2rem;
 }
 
