--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -5,9 +5,7 @@
 }
 
 .portfolio__item {
-    background: #0f0c29;  
-    background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29); 
-    background: linear-gradient(to right, #24243e, #302b63, #0f0c29); 
+    background: var(--color-bg);
     padding: 1.2rem;
     border-radius: 1.5rem;
     border: 1px solid transparent;
