--- a/src/index.css
+++ b/src/index.css
@@ -12,13 +12,11 @@
 
 :root { 
     --color-white: #f3f2ec;
-    --color-bg: #ccaef1 ;
-    --color-primary: #8981b0;
-    --color-primary-variant: rgb(36, 36, 65);
-    --color-dark: rgb(55, 53, 56);
-    --color-light: #a08fbc;
-    --color-lighter: #f2f5f3;
-
+    --color-bg: #ffd54f ;
+    --color-primary: #1d274f;
+    --color-primary-variant: rgb(49, 49, 75);
+    --color-dark: rgb(66, 68, 68);
+    --color-light: #00838f;
     --transition: all 400ms ease;
 
     --conatainer-width-lg: 75%;
@@ -51,7 +49,12 @@ h5 {
 h1 {
     font-size: 2.5rem;
 }
-
+h2 {
+    font-size: 2rem;
+}
+h3 {
+    font-size: 1.5rem;
+}
 section {
     margin-top: 8rem;
 }
@@ -61,6 +64,7 @@ section > h5 {
     text-align: center;
     color: var(--color-ligth);
 }
+
 
 section > h2 {
     color: var(--color-primary);
@@ -75,7 +79,8 @@ section > h2 {
 }
 
 .text-primary {
-    color: var(--color-primary);
+    color: var(--color-white);
+    font-weight: bold;
 }
 
 a {
