--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -65,11 +65,11 @@
     color: var(--color-dark);
 }
 
-.about__story {
+.about__story > p {
     font-family: 'Poor Story', cursive;
     font-size: 1.15rem;
     text-align: justify;
-    font-weight: bold;
+    color: var(--color-light);
 }
 
 .about__story-part-2 {
@@ -78,7 +78,6 @@
     width: 70%;
     margin: 20px auto;
     text-align: justify;
-    font-weight: bold;
     color: var(--color-dark);
 }
 
