--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -18,15 +18,15 @@
 .experience__container > div h3 {
     text-align: center;
     margin-bottom: 2rem;
-    color: var(--color-primary);
+    color: var(--color-white);
 }
 .experience__container > div h4 {
-    color: var(--color-lighter);
+    color: var(--color-white);
 
 }
 
 .experience__details-icon {
-    color: var(--color-primary);
+    color: var(--color-white);
 }
 
 .experience__content-frontend {
