--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -1,3 +1,7 @@
+#portfolio {
+    background-color: var(--color-h2);
+    padding: 3rem 0;
+}
 .portfolio__container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
