--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,3 +1,7 @@
+#about {
+    background-color: var(--color-h2);
+    padding: 3rem 0;
+}
 .about__container {
     display: grid;
     grid-template-columns: 35% 50%;
@@ -52,7 +56,7 @@
 
 .about__card h5 {
     font-size: 0.95rem;
-    color: var(--color-light);
+    color: var(--color-h2);
 }
 
 .about__card small {
@@ -63,6 +67,10 @@
 .about__content p {
     margin: 2rem 0 2.6rem;
     color: var(--color-dark);
+}
+
+.about__story > h2 {
+    color: var(--color-bg);
 }
 
 .about__story > p {
@@ -78,7 +86,7 @@
     width: 70%;
     margin: 20px auto;
     text-align: justify;
-    color: var(--color-dark);
+    color: var(--color-bg);
 }
 
 /* ===================  (MEDIUM DEVICES) ======================== */
