--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -1,3 +1,7 @@
+#experience {
+    background-color: var(--color-bg);
+    padding: 3rem 0;
+}
 .experience__container {
     display: grid;
     grid-template-columns: 1fr;
@@ -5,9 +9,7 @@
 }
 
 .experience__container > div {
-    background: #0f0c29;  
-    background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29); 
-    background: linear-gradient(to right, #24243e, #302b63, #0f0c29); 
+   background-color: var(--color-h3);
     padding: 2.4rem 5rem;
     border-radius: 2rem;
     border: 1px solid transparent;
