--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,10 +1,8 @@
 footer {
-    background: #0f0c29;  
-    background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29); 
-    background: linear-gradient(to right, #24243e, #302b63, #0f0c29); 
+    background-image: url(../../assets/wall.jpg);
+    background-size: cover;
     padding: 3rem 0;
     text-align: center;
-    margin-top: 7rem;
     font-size: 0.9rem;
 }
 
@@ -36,7 +34,7 @@ footer a {
 
 .footer__socials a {
     background: var(--color-white);
-    color: var(--color-dark);
+    color: var(--color-bg);
     padding: 0.8rem;
     border-radius: 0.7rem;
     display: flex;
