--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,7 +1,7 @@
 header {
     height: 65vh;
     width: 100%;
-    padding-top: 3rem;
+    padding-top: 1rem;
     overflow: hidden;
     background-image: url(../../assets/wall.jpg);
     background-size: cover;
@@ -36,46 +36,19 @@ header {
 
 }
 
+.m1-img {
+    width: 10rem;
+    height: 10rem;
+    float: right;
+}
+
+
 /* ==================== CTA ==================== */
 .cta {
-    margin-top: 2.5rem;
+    margin-top: 1.5rem;
     display: flex;
     justify-content: center;
     gap: 1rem;
-}
-
-/* ==================== HEADER SOCIALS ==================== */
-.header__socials {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 0.8rem;
-    position: absolute;
-    left: 0;
-    bottom: 3rem;
-
-}
-
-.header__socials::after {
-    content: "";
-    width: 1px;
-    height: 2rem;
-    background: var(--color-primary);
-}
-
-/* =================== ME ====================== */
-
-.me {
-    background: linear-gradient(var(--color-dark), transparent);
-    width: 22rem;
-    height: 30rem;
-    position: absolute;
-    left: calc(50% - 11rem);
-    margin-top: 4rem;
-    border-radius: 12rem 12rem 0 0;
-    /* overflow: hidden;
-    padding: 5rem 1.5rem 1.5rem 1.5rem; */
-
 }
 
 .text-sub {
@@ -89,7 +62,7 @@ header {
 
 @media screen and (max-width: 1590px) {
     header {
-        height: 68vh;
+        height: 85vh;
     }
   
    
@@ -98,7 +71,7 @@ header {
 /* ===================  (SMALL DEVICES) ======================== */
 @media screen and (max-width: 600px) {
     header {
-        height: 150vh;
+        height: 200vh;
     }
 
     .header__socials,
