--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -2,6 +2,7 @@
     background-color: var(--color-h2);
     padding: 3rem 0;
 }
+
 .about__container {
     display: grid;
     grid-template-columns: 35% 50%;
@@ -77,7 +78,7 @@
     font-family: 'Poor Story', cursive;
     font-size: 1.15rem;
     text-align: justify;
-    color: var(--color-light);
+    color: var(--color-bg);
 }
 
 .about__story-part-2 {
