--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poor+Story&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caprasimo&display=swap');
+
 
 * {
     margin: 0;
@@ -15,11 +17,11 @@
     --color-h2: #1d3e28;
     --color-h3: rgb(204, 195, 173);
     --color-white: #283831;
-    --color-bg: #efecdf ;
+    --color-bg: #e2dfd1 ;
     --color-primary: #893e33;
     --color-primary-variant: rgb(61, 74, 72);
     --color-dark: rgb(24, 27, 27);
-    --color-light: #f3f7f6;
+    --color-light: #efdcb4;
     --transition: all 400ms ease;
 
     --conatainer-width-lg: 75%;
@@ -53,6 +55,10 @@ h1 {
 }
 h2 {
     font-size: 1.5rem;
+    font-family: 'Caprasimo', cursive;
+}
+.h2-title-light {
+    color: var(--color-h3);
 }
 h3 {
     font-size: 1.5rem;
@@ -99,7 +105,7 @@ a:hover {
     width: max-content;
     display: inline-block;
     color: var(--color-primary);
-    padding: 0.75rem 1.2rem;
+    padding: 0.75rem 1.5rem;
     border-radius: 0.4rem;
     cursor: pointer;
     border: 1px solid var(--color-primary);
