--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -52,5 +52,9 @@
         grid-template-columns: 1fr;
         gap: 1rem;
     }
-
+    .portfolio__item-cta {
+        display: flex;
+        gap: 1rem;
+        margin-bottom: 1rem; 
+    }
  }
