--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -37,4 +37,11 @@ nav a.active {
     nav a {
         font-size: 0.6rem;
     }
+    nav {
+        width: max-content;
+        display: block;
+        padding: 0.7rem 2.5rem;
+        display: flex;
+        gap: 0.3rem;
+    }
  }
