--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -15,7 +15,7 @@ header {
 
 .header__container > h1 {
     color: var(--color-h1);
-    font-family: 'Poor Story', cursive;
+    font-family: 'Caprasimo', cursive;
     padding-bottom: 30px;
     letter-spacing: 1.5px;
     font-size: 3.5rem;;
