--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -18,7 +18,7 @@ header {
     font-family: 'Caprasimo', cursive;
     padding-bottom: 30px;
     letter-spacing: 1.5px;
-    font-size: 3.5rem;;
+    font-size: 2.75rem;;
 
 }
 
@@ -66,6 +66,10 @@ header {
     header {
         height: 210vh;
     }
+    .header__container > h1 {
+        font-size: 2.15rem;;
+    
+    } 
 
     .header__socials,
     .scroll__down {
