--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -50,6 +50,7 @@ input, textarea {
     border-radius: 0.5rem;
     background: var(--color-white);
     border: 2px solid var(--color-bg);
+    color: var(--color-light);
     resize: none;
     font-size: 0.9rem;
 }
