--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -67,7 +67,7 @@ header {
         height: 210vh;
     }
     .header__container > h1 {
-        font-size: 2.15rem;;
+        font-size: 2.15rem;
     
     } 
 
