--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -6,10 +6,11 @@
     display: grid;
     grid-template-columns: 1fr;
     gap: 2rem;
+    padding: 1.5rem;
 }
 
 .experience__container > div {
-   background-color: var(--color-h3);
+    background-color: var(--color-h3);
     padding: 2.4rem 5rem;
     border-radius: 2rem;
     border: 1px solid transparent;
@@ -34,7 +35,12 @@
 .experience__content-frontend {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 2rem;
+    gap: 0.5rem;
+}
+.experience__content-backend {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 0.5rem;
 }
 
 .experience__details {
