fixing header & experience css error

--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -82,8 +82,8 @@
     }
     .experience__content-frontend {
         display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 2rem;
+        grid-template-columns: 1fr;
+        gap: 0.5rem;
     }
  
 }
